# football-analytics

./: .gitignore  Design_Proposal.md  Makefile  README.md  config.py  pyproject.toml  requirements.txt  setup.py
ai/: __init__.py  config.py  config_io.py  dataset.py
ai/experiments/: yolo11_optuna_hyperparameter_search.py
ai/modeling/: predict.py  train.py  validate.py
configurations/: hyperparameter_search.json  train.json  validate.json
core/: annotations.py  utils.py
docs/: mkdocs.yml
docs/docs/: index.md
football-analytics/: README.md
football-analytics/football_analytics/: __init__.py  dataset.py
football-analytics/football_analytics/modeling/: predict.py
football_analytics/: __init__.py  config.py  config_io.py  dataset.py  features.py  plots.py
football_analytics/annotations/: annotations.py  frame_annotator.py  radar.py
football_analytics/ball_inference/: ball_tracker.py  yolo_ball_inferer.py
football_analytics/camera_estimation/: velocity.py  view_transformer.py
football_analytics/experiments/: yolo11_optuna_hyperparameter_search.py
football_analytics/football_pitch/: draw_football_pitch.py  football_pitch_configuration.py  view_transformer.py
football_analytics/keypoint_detection/: yolo_keypoints_detector.py
football_analytics/modeling/: train.py  validate.py
football_analytics/player_inference/: team_processor.py  yolo_players_inferer.py
football_analytics/utils/: iter.py  model.py  utils.py
notebooks/: 1.0_db_differentiate_players_between_teams.ipynb  1.0_dm_train_ball_detector.ipynb  1.0_dm_train_player_detector.ipynb  1.0_np_camera_estimation.ipynb  1.0_np_train_pitch_keypoint_detector.ipynb  camera_estimation.ipynb
scripts/: download_models.py  run_analytics.py
services/: config.py
services/ball_inference/: ball_inference_service.py
services/ball_inference/examples/: ball_inference_client.py
services/ball_inference/grpc_files/: ball_inference.proto  ball_inference_pb2.py  ball_inference_pb2.pyi  ball_inference_pb2_grpc.py
services/inference_manager/: grpc_client_manager.py  inference_manager_service.py
services/inference_manager/examples/: inference_manager_client.py
services/inference_manager/grpc_files/: inference_manager.proto  inference_manager_pb2.py  inference_manager_pb2.pyi  inference_manager_pb2_grpc.py
services/keypoints_detection/: keypoints_detection_service.py
services/keypoints_detection/examples/: keypoints_detection_client.py
services/keypoints_detection/grpc_files/: keypoints_detection.proto  keypoints_detection_pb2.py  keypoints_detection_pb2.pyi  keypoints_detection_pb2_grpc.py
services/player_inference/: player_inference_service.py
services/player_inference/examples/: player_inference_client.py
services/player_inference/grpc_files/: player_inference.proto  player_inference_pb2.py  player_inference_pb2.pyi  player_inference_pb2_grpc.py
services/track/: app.py
services/track/routes/: infer.py
tests/core/: test_utils.py
tests/football_analytics/utils/: test_utils.py
tests/services/: test_track.py
tests/test_football_analytics/test_annotations/: test_frame_annotator.py  test_radar.py
tests/test_football_analytics/test_ball_inference/: test_ball_tracker.py  test_yolo_ball_inferer.py
tests/test_football_analytics/test_camera_estimation/: test_velocity.py  test_view_transformer.py
tests/test_football_analytics/test_football_pitch/: test_draw_football_pitch.py  test_football_pitch_configuration.py  test_view_transformer.py
tests/test_football_analytics/test_keypoint_detection/: test_yolo_keypoint_detector.py
tests/test_football_analytics/test_player_inference/: test_team_processor.py  test_yolo_player_inferer.py
tests/test_football_analytics/test_utils/: test_iter.py  test_model.py
(+8 files in other folders)
