[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "football_analytics"
version = "0.1.0"
description = "Football analytics library"
authors = [
  { name = "AI Ballers" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = ">=3.12"

dependencies = [
    "black",
    "ruff",
    "mypy",
    "numpy",
    "opencv-python",
    "httpx",
    "fastapi",
    "flake8",
    "isort",
    "loguru",
    "mkdocs",
    "pip",
    "types-requests",
    "python-dotenv",
    "tqdm",
    "typer",
    "ultralytics",
    "uvicorn",
    "supervision",
    "requests",
    "pytest",
    "pytest-cov",
    "python-multipart",
    "kagglehub",
    "tensorboard",
    "grpcio>=1.69.0",
    "grpcio.tools>=1.69.0",
    "grpc-stubs",
    "optuna",
    "grpcio>=1.69.0",
    "grpcio-tools>=1.69.0"
  ]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["E501"]
select = ["I", "F"]

[tool.pytest.ini_options]
pythonpath = ["football_analytics"]
addopts = "--cov=football_analytics --cov-report=term-missing"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
